--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -1,8 +1,8 @@
 @charset "utf-8";
 @import "normalize";
+@import "my_own";
 
 body {
-  background: #ECC561;
   text-align: center;
   font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 1em;
